# CryptoNets-with-Python

./: CMakeLists.txt  compile_SEAL.sh  compile_wrapper.sh  new_wrapper.cpp  wrapper.py
